# SPD-ROOT

./: CMakeLists.txt  README.md  SetEnv.sh  spd_check_system.csh  spd_check_system.sh  spdroot.py
aeg/: CMakeLists.txt  SpdAeg.cxx  SpdAeg.h  SpdAegContFact.cxx  SpdAegContFact.h  SpdAegLinkDef.h  SpdAegParSet.cxx  SpdAegParSet.h  SpdAegPoint.cxx  SpdAegPoint.h
bbc/: CMakeLists.txt  SpdBbc.cxx  SpdBbc.h  SpdBbcContFact.cxx  SpdBbcContFact.h  SpdBbcLinkDef.h  SpdBbcParSet.cxx  SpdBbcParSet.h  SpdBbcPoint.cxx  SpdBbcPoint.h
common/: CMakeLists.txt  SpdCommonGeoMapper.cxx  SpdCommonGeoMapper.h  SpdCommonLinkDef.h  SpdDetector.cxx  SpdDetector.h  SpdGlobals.h  SpdModulesMap.cxx  SpdModulesMap.h  SpdParticlesAndProcesses.cxx  SpdParticlesAndProcesses.h  SpdPassiveModule.cxx  SpdPassiveModule.h  SpdRootFileSink.cxx  SpdRootFileSink.h  SpdRunAna.cxx  SpdRunAna.h  SpdRunSim.cxx  SpdRunSim.h  SpdStack.cxx  SpdStack.h  SpdTask.cxx  SpdTask.h
common/checks/: SpdGeoScanner.cxx  SpdGeoScanner.h
common/geometry/: SpdGeoBuilder.cxx  SpdGeoBuilder.h  SpdGeoMapper.cxx  SpdGeoMapper.h  SpdGeoTable.cxx  SpdGeoTable.h  SpdGeoVVolume.cxx  SpdGeoVVolume.h  SpdGeoVolPars.cxx  SpdGeoVolPars.h  SpdNodesIdTable.cxx  SpdNodesIdTable.h
common/region/: SpdRegion.cxx  SpdRegion.h
doc/: ReleaseNotes.txt
docker/: Dockerfile  README.md  do.run  env.run  spd-fairsoft-nov15p7.conf
ecalt/: CMakeLists.txt  SpdEcalTContFact.cxx  SpdEcalTContFact.h  SpdEcalTPointAn.cxx  SpdEcalTPointAn.h  SpdEcalTX2HitProducerCommon.cxx  SpdEcalTX2HitProducerCommon.h  SpdEcaltLinkDef.h
ecalt/barrel/: SpdEcalB.cxx  SpdEcalB.h  SpdEcalBPoint.cxx  SpdEcalBPoint.h  SpdEcalTB.cxx  SpdEcalTB.h  SpdEcalTB2.cxx  SpdEcalTB2.h  SpdEcalTB2HitProducer.cxx  SpdEcalTB2HitProducer.h  SpdEcalTB2Point.cxx  SpdEcalTB2Point.h  SpdEcalTB2Reconstruction.cxx  SpdEcalTB2Reconstruction.h  SpdEcalTBHitProducer.cxx  SpdEcalTBHitProducer.h  SpdEcalTBParSet.cxx  SpdEcalTBParSet.h  SpdEcalTBPoint.cxx  SpdEcalTBPoint.h
ecalt/ecps/: SpdEcalEC.cxx  SpdEcalEC.h  SpdEcalECPoint.cxx  SpdEcalECPoint.h  SpdEcalTEC.cxx  SpdEcalTEC.h  SpdEcalTEC2.cxx  SpdEcalTEC2.h  SpdEcalTEC2HitProducer.cxx  SpdEcalTEC2HitProducer.h  SpdEcalTEC2Point.cxx  SpdEcalTEC2Point.h  SpdEcalTEC2Reconstruction.cxx  SpdEcalTEC2Reconstruction.h  SpdEcalTECHitProducer.cxx  SpdEcalTECHitProducer.h  SpdEcalTECParSet.cxx  SpdEcalTECParSet.h  SpdEcalTECPoint.cxx  SpdEcalTECPoint.h
experimental/: CMakeLists.txt  SpdExperimentalLinkDef.h
experimental/rstrkfinder/: RsGFMeasurementMaker.cxx  RsGFMeasurementMaker.h  RsPlaneHolder.cxx  RsPlaneHolder.h  (+6 more)
field/: CMakeLists.txt  FieldLinkDef.h  SpdAxialFieldMap.cxx  SpdAxialFieldMap.h  SpdAxialFieldMapData.cxx  SpdAxialFieldMapData.h  SpdConstField.cxx  SpdConstField.h  SpdField.cxx  SpdField.h  SpdFieldContFact.cxx  SpdFieldContFact.h  SpdFieldCreator.cxx  SpdFieldCreator.h  SpdFieldMap.cxx  SpdFieldMap.h  SpdFieldMap1_8.cxx  SpdFieldMap1_8.h  SpdFieldMapData.cxx  SpdFieldMapData.h  SpdFieldMapData1_8.cxx  SpdFieldMapData1_8.h  SpdFields.hh  SpdMultiField.cxx  SpdMultiField.h  SpdRadialField.cxx  SpdRadialField.h
gconfig/: DecayConfig.C  DecayConfigPythia8.C  DecayConfigSpecV0.C  Geane.C  SetCuts.C  UserDecay.C  g3Config.C  g4Config.C  g4config.in
geometry/: cave_precise.geo  emc_tr.geo  emc_tr_xxx.geo  media.geo  mpd_magnet_v4_0.geo  sts.geo  sts_v2.geo  sts_v3.geo  sts_vacuum.geo
its/: CMakeLists.txt  SpdIts.cxx  SpdIts.h  SpdItsContFact.cxx  SpdItsContFact.h  SpdItsLinkDef.h  SpdItsParSet.cxx  SpdItsParSet.h  SpdItsPoint.cxx  SpdItsPoint.h
macro/: .rootrc  DisplayEvent.C  README.md  SimuQslPy6.C  SimuQslPy8.C  rootlogoff.C  rootlogon.C
mvd/: CMakeLists.txt  SpdMvd.cxx  SpdMvd.h  SpdMvdContFact.cxx  SpdMvdContFact.h  SpdMvdLinkDef.h  SpdMvdParSet.cxx  SpdMvdParSet.h  SpdMvdPoint.cxx  SpdMvdPoint.h
passive/: CMakeLists.txt  PassiveLinkDef.h  SpdCave.cxx  SpdCave.h  SpdGeoCave.cxx  SpdGeoCave.h  SpdGeoFrame.cxx  SpdGeoFrame.h  SpdHybMagnet.cxx  SpdHybMagnet.h  SpdPassives.hh  SpdPipe.cxx  SpdPipe.h  SpdSolMagnet.cxx  SpdSolMagnet.h  SpdSolMagnet2.cxx  SpdSolMagnet2.h  SpdTorBasket.cxx  SpdTorBasket.h  SpdTorMagnet.cxx  SpdTorMagnet.h
proc/: CMakeLists.txt
reco/: CMakeLists.txt  SpdMCEventHelper.cxx  SpdMCEventHelper.h  SpdMCEventMaker.cxx  SpdMCEventMaker.h  SpdRecoLinkDef.h
rst/: CMakeLists.txt  SpdRsTContFact.cxx  SpdRsTContFact.h  SpdRstLinkDef.h
sol/: CMakeLists.txt
spddata/: CMakeLists.txt  RWdata.cxx  RWdata.h  SpdDataLinkDef.h  SpdDetectorList.h  SpdGeopathParser.cxx  SpdGeopathParser.h
spddisplay/: CMakeLists.txt  SpdDisplayLinkDef.h  SpdEveEventViewer.cxx  SpdEveEventViewer.h  SpdEventManager.cxx  SpdEventManager.h  SpdFairEventManager.cxx  SpdFairEventManager.h  SpdMCTracks.cxx  SpdMCTracks.h
spdgenerators/: CMakeLists.txt  GenLinkDef.h  SpdDecayer.cxx  SpdDecayer.h  SpdEvtBaseGenerator.cxx  SpdEvtBaseGenerator.h  SpdFtfGenerator.cxx  SpdFtfGenerator.h  SpdGenerator.cxx  SpdGenerator.h  SpdGenerators.hh  SpdIsotropicGenerator.cxx  SpdIsotropicGenerator.h  SpdMultiParticleGenerator.cxx  SpdMultiParticleGenerator.h  SpdParticleGenerator.cxx  SpdParticleGenerator.h  SpdPrimGenFactory.cxx  SpdPrimGenFactory.h  SpdPrimaryGenerator.cxx  SpdPrimaryGenerator.h  SpdPythia6.cxx  SpdPythia6.h  SpdPythia6Decayer.cxx  SpdPythia6Decayer.h  SpdPythia6Generator.cxx  SpdPythia6Generator.h  SpdPythia8.cxx  SpdPythia8.h  SpdPythia8Decayer.cxx  SpdPythia8Decayer.h  SpdPythia8Generator.cxx  SpdPythia8Generator.h  SpdUniformPtCostGenerator.cxx  SpdUniformPtCostGenerator.h  SpdUrqmdGenerator.cxx  SpdUrqmdGenerator.h
spdgeometry/: CMakeLists.txt  SpdGeoFactory.cxx  SpdGeoFactory.h  SpdGeoLoader.cxx  SpdGeoLoader.h  SpdGeometryLinkDef.h
test/: CMakeLists.txt  SpdTestLinkDef.h
tof/: CMakeLists.txt  SpdTofContFact.cxx  SpdTofContFact.h  SpdTofLinkDef.h
tools/: CreateNewClass.pl
tst/: CMakeLists.txt  SpdTsTContFact.cxx  SpdTsTContFact.h  SpdTstLinkDef.h
zdc/: CMakeLists.txt  SpdZdc.cxx  SpdZdc.h  SpdZdcContFact.cxx  SpdZdcContFact.h  SpdZdcLinkDef.h  SpdZdcParSet.cxx  SpdZdcParSet.h  SpdZdcPoint.cxx  SpdZdcPoint.h
(+708 files in other folders)
